# school-management

./: .gitignore  AGENTS.md  README.md  SPEC.md  main.py  pyproject.toml
academics/: forms.py  models.py  tests.py  urls.py  views.py
academics/migrations/: 0001_initial.py  0002_initial.py
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_phone_unique.py  0004_alter_phone_nullable.py  0005_alter_user_managers_alter_user_phone.py
attendance/: access.py  admin.py  models.py  tests.py  urls.py  views.py
communications/: mixins.py  models.py  services.py  tests.py  urls.py  views.py
core/: views.py
dashboard/: models.py  urls.py  views.py
docs/adr/: README.md
examinations/: admin.py  models.py  urls.py  views.py
fees/: access.py  forms.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
plans/: permission_checking_system_plan.md  role_permission_system_plan.md
questions/: admin.py  models.py  tests.py  urls.py  views.py
reports/: urls.py
roles/: admin.py  apps.py  decorators.py  forms.py  middleware.py  models.py  permissions.py  services.py  signals.py  tests.py  urls.py  utils.py  views.py
school_management/: settings.py  urls.py
settings_app/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
students/: access.py  deletion.py  forms.py  models.py  summary.py  tests.py  urls.py  views.py
templates/: base.html  coming_soon.html
transport/: apps.py  models.py  signals.py  tests.py  urls.py  views.py
(+143 files in other folders)
