[project]
name = "smm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.12",
    "django-select2>=8.4.8",
    "google-genai>=1.71.0",
    "google-generativeai>=0.8.0",
    "groq>=0.30.0",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
]
